# oop_software_arch_DSR

./: .gitignore  00_UML_class_diagrams.ipynb  01_ Intro_to_OOP.ipynb  02_Abstraction_encapsulation.ipynb  03_Special_methods.ipynb  04_Docstrings.ipynb  05_Subclasses_and_Inheritance.ipynb  06_Polymorphism_in_Python.ipynb  06_UML_class_diagrams.ipynb  07_Instance_Class_and_Static_Attributes.ipynb  07_Polymorphism_in_Python.ipynb  08_Instance_Class_and_Static_Attributes.ipynb  09_Project_folder_structure.ipynb  10_Logging.ipynb  11_Handling_exceptions.ipynb  12_Intro_to_testing.ipynb  13_Code_versioning.ipynb  README.md  Working.ipynb  main.py  ps4e2-visual-eda-lgbm-obesity-risk.ipynb  pyproject.toml  sample.csv  setup.py  visual-eda-obesity-risk.ipynb
data/raw/: sample.json  sample_data.csv
models/: random_forest_model.pkl
notebooks/: 01_ Intro_to_OOP.ipynb  02_Abstraction_encapsulation.ipynb  03_Special_methods.ipynb  04_Docstrings.ipynb  05_Subclasses_and_Inheritance.ipynb  06_UML_class_diagrams.ipynb  07_Polymorphism_in_Python.ipynb  08_Instance_Class_and_Static_Attributes.ipynb  09_Project_folder_structure.ipynb  10_Logging.ipynb  11_Handling_exceptions.ipynb  12_Intro_to_testing.ipynb  13_Code_versioning.ipynb  log.txt  refactor_example_v1.ipynb  refactor_example_v2.ipynb  refactor_example_v2_filled.ipynb  refactor_example_v3.ipynb  refactor_example_v3_filled.ipynb  refactor_example_v4.ipynb  refactor_example_v5.ipynb  refactor_example_v6.ipynb  refactor_example_v7.ipynb
src/: config.py  data.py  dataset.py  errors.py  utils_modelling.py
src/utils/: config.py
(+1 files in other folders)
