[project]
name = "oop-software-arch-dsr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
experiment1 = [
    "pyarrow>=21.0.0",
]
